# compressor-plugin

./: Cargo.toml  README.md
plot/: plot.py
scripts/: macos-build-and-install.sh
src/: compressor.rs  compressor2.rs  compressor_effect_parameters.rs  editor.rs  lib.rs  logging.rs  low_pass_filter.rs  parameter.rs  units.rs
