[package]
name = "comp"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baseplug = { git = "https://github.com/DGriffin91/baseplug.git", branch = "shared"}
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "d399c1275522ae75f5a82caadd904df2685c8660" }
imgui-baseview = { git = "https://github.com/BillyDM/imgui-baseview.git" }
imgui = "0.7"
imgui-knobs = {git = "https://github.com/DGriffin91/imgui-rs-knobs", branch = "main"}
serde = { version = "1.0", features = ["derive"] }
raw-window-handle = "0.3"
keyboard-types = { version = "0.5.0", default-features = false }
rtrb = "0.1.1"

dirs = "3"
log = "0.4"
log-panics = "2"
simplelog = "0.8"

rand = "0.8.4"

ringbuf = "0.2.6"

basic-audio-filters = {git = "https://github.com/DGriffin91/rust-basic-audio-filters", branch = "main"}

